Added translations for Settings, CameraMode, SupportedLanguage

--- a/ReEnabled/Localization/en.lproj/Localizable.strings
+++ b/ReEnabled/Localization/en.lproj/Localizable.strings
@@ -22,7 +22,11 @@
 
 // MARK: - Settings Tab
 
-
+"navigationTitle" = "Settings"
+"displayOnboarding" = "Display Onboarding"
+"deleteAllConversations" = "Delete All Conversations"
+"restoreDefaultSettings" = "Restore Default Settings"
+"letDeviceManageFlashlightForItself" = "Let device manage flashlight for itself"
 
 // MARK: - Onboarding
 
@@ -239,6 +243,9 @@ Swipe left to go to previous sections of the guide.
 "settingsSpeechFeedbackSubscriptionPlanHasBeenChangedTo" = "Subscription plan has been changed to";
 "settingsSpeechFeedbackAllConversationsDeleted" = "All conversations have been deleted";
 "settingsSpeechFeedbackRestoredDefaultSettings" = "Settings have been restored to default";
+"settingsSpeechFeedbackDoubleTapToDisplayOnboarding" = "Double tap to display onboarding";
+"settingsSpeechFeedbackDoubleTapToDeleteConversations" = "Double tap to delete conversations"
+"settingsSpeechFeedbackDoubleTapToRestoreDefaultSettings" = "Double tap to restore default settings"
 
 "onboardingSpeechFeedbackOnboardingHasBeenCompleted" = "Onboarding has been completed";
 "onboardingSpeechFeedbackSwipeRightToProceed" = "Swipe right to proceed";
@@ -306,3 +313,12 @@ Swipe left to go to previous sections of the guide.
 
 // MARK: - Other
 
+"cameraModeMainRecognizer" = "Main Recognizer";
+"cameraModeDocumentScanner" = "Document Scanner";
+"cameraModeColorDetector" = "Color Detector";
+"cameraModeLightDetector" = "Light Detector";
+
+"supportedLanguageEnglish" = "English";
+"supportedLanguagePolish" = "Polish"
+"supportedLanguageHiMyNameIs" = "Hi! My name is";
+"supportedLanguageWhatCanIDoForYou" = "What can I do for you?"
