--- a/ReEnabled/Localization/pl.lproj/Localizable.strings
+++ b/ReEnabled/Localization/pl.lproj/Localizable.strings
@@ -22,11 +22,11 @@
 
 // MARK: - Settings Tab
 
-"navigationTitle" = "Ustawienia"
-"displayOnboarding" = "Wyświetl wprowadzenie"
-"deleteAllConversations" = "Usuń wszystkie rozmowy"
-"restoreDefaultSettings" = "Przywróć domyślne ustawienia"
-"letDeviceManageFlashlightForItself" = "Pozwól urządzeniu automatycznie decydować o trybie latarki"
+"navigationTitle" = "Ustawienia";
+"displayOnboarding" = "Wyświetl wprowadzenie";
+"deleteAllConversations" = "Usuń wszystkie rozmowy";
+"restoreDefaultSettings" = "Przywróć domyślne ustawienia";
+"letDeviceManageFlashlightForItself" = "Pozwól urządzeniu automatycznie decydować o trybie latarki";
 
 // MARK: - Onboarding
 
@@ -244,8 +244,8 @@ Przesuń w lewo, aby wrócić do poprzednich sekcji przewodnika.
 "settingsSpeechFeedbackAllConversationsDeleted" = "Wszystkie rozmowy zostały usunięte";
 "settingsSpeechFeedbackRestoredDefaultSettings" = "Ustawienia zostały przywrócone do domyślnych";
 "settingsSpeechFeedbackDoubleTapToDisplayOnboarding" = "Naciśnij dwa razy aby wyświetlić samouczek";
-"settingsSpeechFeedbackDoubleTapToDeleteConversations" = "Naciśnij dwa razy aby usunąć wszystkie rozmowy"
-"settingsSpeechFeedbackDoubleTapToRestoreDefaultSettings" = "Naciśnij dwa razy aby przywrócić ustawienia fabryczne"
+"settingsSpeechFeedbackDoubleTapToDeleteConversations" = "Naciśnij dwa razy aby usunąć wszystkie rozmowy";
+"settingsSpeechFeedbackDoubleTapToRestoreDefaultSettings" = "Naciśnij dwa razy aby przywrócić ustawienia fabryczne";
 
 "onboardingSpeechFeedbackOnboardingHasBeenCompleted" = "Onboarding został ukończony";
 "onboardingSpeechFeedbackSwipeRightToProceed" = "Przesuń w prawo, aby kontynuować";
