Added translations for RoadLightType

--- a/ReEnabled/Localization/en.lproj/Localizable.strings
+++ b/ReEnabled/Localization/en.lproj/Localizable.strings
@@ -310,86 +310,90 @@ Swipe left to go to previous sections of the guide.
 
 // MARK: - ML Model Label
 
-"ObjectMLModelPerson" = "person";
-"ObjectMLModelBicycle" = "bicycle";
-"ObjectMLModelCar" = "car";
-"ObjectMLModelMotorbike" = "motorbike";
-"ObjectMLModelAeroplane" = "aeroplane";
-"ObjectMLModelBus" = "bus";
-"ObjectMLModelTrain" = "train";
-"ObjectMLModelTruck" = "truck";
-"ObjectMLModelBoat" = "boat";
-"ObjectMLModelTrafficLight" = "traffic light";
-"ObjectMLModelFireHydrant" = "fire hydrant";
-"ObjectMLModelStopSign" = "stop sign";
-"ObjectMLModelParkingMeter" = "parking meter";
-"ObjectMLModelBench" = "bench";
-"ObjectMLModelBird" = "bird";
-"ObjectMLModelCat" = "cat";
-"ObjectMLModelDog" = "dog";
-"ObjectMLModelHorse" = "horse";
-"ObjectMLModelSheep" = "sheep";
-"ObjectMLModelCow" = "cow";
-"ObjectMLModelElephant" = "elephant";
-"ObjectMLModelBear" = "bear";
-"ObjectMLModelZebra" = "zebra";
-"ObjectMLModelGiraffe" = "giraffe";
-"ObjectMLModelBackpack" = "backpack";
-"ObjectMLModelUmbrella" = "umbrella";
-"ObjectMLModelHandbag" = "handbag";
-"ObjectMLModelTie" = "tie";
-"ObjectMLModelSuitcase" = "suitcase";
-"ObjectMLModelFrisbee" = "frisbee";
-"ObjectMLModelSkis" = "skis";
-"ObjectMLModelSnowboard" = "snowboard";
-"ObjectMLModelSportsBall" = "sports ball";
-"ObjectMLModelKite" = "kite";
-"ObjectMLModelBaseballBat" = "baseball bat";
-"ObjectMLModelBaseballGlove" = "baseball glove";
-"ObjectMLModelSkateboard" = "skateboard";
-"ObjectMLModelSurfboard" = "surfboard";
-"ObjectMLModelTennisRacket" = "tennis racket";
-"ObjectMLModelBottle" = "bottle";
-"ObjectMLModelWineGlass" = "wine glass";
-"ObjectMLModelCup" = "cup";
-"ObjectMLModelFork" = "fork";
-"ObjectMLModelKnife" = "knife";
-"ObjectMLModelSpoon" = "spoon";
-"ObjectMLModelBowl" = "bowl";
-"ObjectMLModelBanana" = "banana";
-"ObjectMLModelApple" = "apple";
-"ObjectMLModelSandwich" = "sandwich";
-"ObjectMLModelOrange" = "orange";
-"ObjectMLModelBroccoli" = "broccoli";
-"ObjectMLModelCarrot" = "carrot";
-"ObjectMLModelHotDog" = "hot dog";
-"ObjectMLModelPizza" = "pizza";
-"ObjectMLModelDonut" = "donut";
-"ObjectMLModelCake" = "cake";
-"ObjectMLModelChair" = "chair";
-"ObjectMLModelSofa" = "sofa";
-"ObjectMLModelPottedPlant" = "pottedplant";
-"ObjectMLModelBed" = "bed";
-"ObjectMLModelDiningTable" = "diningtable";
-"ObjectMLModelToilet" = "toilet";
-"ObjectMLModelTVMonitor" = "tvmonitor";
-"ObjectMLModelLaptop" = "laptop";
-"ObjectMLModelMouse" = "mouse";
-"ObjectMLModelRemote" = "remote";
-"ObjectMLModelKeyboard" = "keyboard";
-"ObjectMLModelCellPhone" = "cell phone";
-"ObjectMLModelMicrowave" = "microwave";
-"ObjectMLModelOven" = "oven";
-"ObjectMLModelToaster" = "toaster";
-"ObjectMLModelSink" = "sink";
-"ObjectMLModelRefrigerator" = "refrigerator";
-"ObjectMLModelBook" = "book";
-"ObjectMLModelClock" = "clock";
-"ObjectMLModelVase" = "vase";
-"ObjectMLModelScissors" = "scissors";
-"ObjectMLModelTeddyBear" = "teddy bear";
-"ObjectMLModelHairDrier" = "hair drier";
-"ObjectMLModelToothbrush" = "toothbrush";
+"objectMLModelPerson" = "person";
+"objectMLModelBicycle" = "bicycle";
+"objectMLModelCar" = "car";
+"objectMLModelMotorbike" = "motorbike";
+"objectMLModelAeroplane" = "aeroplane";
+"objectMLModelBus" = "bus";
+"objectMLModelTrain" = "train";
+"objectMLModelTruck" = "truck";
+"objectMLModelBoat" = "boat";
+"objectMLModelTrafficLight" = "traffic light";
+"objectMLModelFireHydrant" = "fire hydrant";
+"objectMLModelStopSign" = "stop sign";
+"objectMLModelParkingMeter" = "parking meter";
+"objectMLModelBench" = "bench";
+"objectMLModelBird" = "bird";
+"objectMLModelCat" = "cat";
+"objectMLModelDog" = "dog";
+"objectMLModelHorse" = "horse";
+"objectMLModelSheep" = "sheep";
+"objectMLModelCow" = "cow";
+"objectMLModelElephant" = "elephant";
+"objectMLModelBear" = "bear";
+"objectMLModelZebra" = "zebra";
+"objectMLModelGiraffe" = "giraffe";
+"objectMLModelBackpack" = "backpack";
+"objectMLModelUmbrella" = "umbrella";
+"objectMLModelHandbag" = "handbag";
+"objectMLModelTie" = "tie";
+"objectMLModelSuitcase" = "suitcase";
+"objectMLModelFrisbee" = "frisbee";
+"objectMLModelSkis" = "skis";
+"objectMLModelSnowboard" = "snowboard";
+"objectMLModelSportsBall" = "sports ball";
+"objectMLModelKite" = "kite";
+"objectMLModelBaseballBat" = "baseball bat";
+"objectMLModelBaseballGlove" = "baseball glove";
+"objectMLModelSkateboard" = "skateboard";
+"objectMLModelSurfboard" = "surfboard";
+"objectMLModelTennisRacket" = "tennis racket";
+"objectMLModelBottle" = "bottle";
+"objectMLModelWineGlass" = "wine glass";
+"objectMLModelCup" = "cup";
+"objectMLModelFork" = "fork";
+"objectMLModelKnife" = "knife";
+"objectMLModelSpoon" = "spoon";
+"objectMLModelBowl" = "bowl";
+"objectMLModelBanana" = "banana";
+"objectMLModelApple" = "apple";
+"objectMLModelSandwich" = "sandwich";
+"objectMLModelOrange" = "orange";
+"objectMLModelBroccoli" = "broccoli";
+"objectMLModelCarrot" = "carrot";
+"objectMLModelHotDog" = "hot dog";
+"objectMLModelPizza" = "pizza";
+"objectMLModelDonut" = "donut";
+"objectMLModelCake" = "cake";
+"objectMLModelChair" = "chair";
+"objectMLModelSofa" = "sofa";
+"objectMLModelPottedPlant" = "pottedplant";
+"objectMLModelBed" = "bed";
+"objectMLModelDiningTable" = "diningtable";
+"objectMLModelToilet" = "toilet";
+"objectMLModelTVMonitor" = "tvmonitor";
+"objectMLModelLaptop" = "laptop";
+"objectMLModelMouse" = "mouse";
+"objectMLModelRemote" = "remote";
+"objectMLModelKeyboard" = "keyboard";
+"objectMLModelCellPhone" = "cell phone";
+"objectMLModelMicrowave" = "microwave";
+"objectMLModelOven" = "oven";
+"objectMLModelToaster" = "toaster";
+"objectMLModelSink" = "sink";
+"objectMLModelRefrigerator" = "refrigerator";
+"objectMLModelBook" = "book";
+"objectMLModelClock" = "clock";
+"objectMLModelVase" = "vase";
+"objectMLModelScissors" = "scissors";
+"objectMLModelTeddyBear" = "teddy bear";
+"objectMLModelHairDrier" = "hair drier";
+"objectMLModelToothbrush" = "toothbrush";
+
+"roadLightMLModelRed" = "red";
+"roadLightMLModelGreen" = "green";
+"roadLightMLModelYellow" = "yellow";
 
 // MARK: - Other
 
@@ -440,3 +444,6 @@ Swipe left to go to previous sections of the guide.
 
 "flashlightTriggerModeAutomatic" = "Automatic";
 "flashlightTriggerModeSpecificValue" = "Specific Value";
+
+"distanceMeasureUnitCentimeters" = "Centimeters";
+"distanceMeasureUnitMeters" = "Meters";
