--- a/ReEnabled/Localization/pl.lproj/Localizable.strings
+++ b/ReEnabled/Localization/pl.lproj/Localizable.strings
@@ -310,86 +310,90 @@ Przesuń w lewo, aby wrócić do poprzednich sekcji przewodnika.
 
 // MARK: - ML Model Label
 
-"ObjectMLModelPerson" = "osoba";
-"ObjectMLModelBicycle" = "rower";
-"ObjectMLModelCar" = "samochód";
-"ObjectMLModelMotorbike" = "motocykl";
-"ObjectMLModelAeroplane" = "samolot";
-"ObjectMLModelBus" = "autobus";
-"ObjectMLModelTrain" = "pociąg";
-"ObjectMLModelTruck" = "ciężarówka";
-"ObjectMLModelBoat" = "łódź";
-"ObjectMLModelTrafficLight" = "sygnalizacja świetlna";
-"ObjectMLModelFireHydrant" = "hydrant przeciwpożarowy";
-"ObjectMLModelStopSign" = "znak stop";
-"ObjectMLModelParkingMeter" = "parkomat";
-"ObjectMLModelBench" = "ławka";
-"ObjectMLModelBird" = "ptak";
-"ObjectMLModelCat" = "kot";
-"ObjectMLModelDog" = "pies";
-"ObjectMLModelHorse" = "koń";
-"ObjectMLModelSheep" = "owca";
-"ObjectMLModelCow" = "krowa";
-"ObjectMLModelElephant" = "słoń";
-"ObjectMLModelBear" = "niedźwiedź";
-"ObjectMLModelZebra" = "zebra";
-"ObjectMLModelGiraffe" = "żyrafa";
-"ObjectMLModelBackpack" = "plecak";
-"ObjectMLModelUmbrella" = "parasolka";
-"ObjectMLModelHandbag" = "torebka";
-"ObjectMLModelTie" = "krawat";
-"ObjectMLModelSuitcase" = "walizka";
-"ObjectMLModelFrisbee" = "frisbee";
-"ObjectMLModelSkis" = "narty";
-"ObjectMLModelSnowboard" = "snowboard";
-"ObjectMLModelSportsBall" = "piłka sportowa";
-"ObjectMLModelKite" = "latawiec";
-"ObjectMLModelBaseballBat" = "kij baseballowy";
-"ObjectMLModelBaseballGlove" = "rękawica baseballowa";
-"ObjectMLModelSkateboard" = "deskorolka";
-"ObjectMLModelSurfboard" = "deska surfingowa";
-"ObjectMLModelTennisRacket" = "rakieta tenisowa";
-"ObjectMLModelBottle" = "butelka";
-"ObjectMLModelWineGlass" = "szklanka do wina";
-"ObjectMLModelCup" = "filiżanka";
-"ObjectMLModelFork" = "widelec";
-"ObjectMLModelKnife" = "nóż";
-"ObjectMLModelSpoon" = "łyżka";
-"ObjectMLModelBowl" = "miska";
-"ObjectMLModelBanana" = "banan";
-"ObjectMLModelApple" = "jabłko";
-"ObjectMLModelSandwich" = "kanapka";
-"ObjectMLModelOrange" = "pomarańcza";
-"ObjectMLModelBroccoli" = "brokuły";
-"ObjectMLModelCarrot" = "marchew";
-"ObjectMLModelHotDog" = "hot dog";
-"ObjectMLModelPizza" = "pizza";
-"ObjectMLModelDonut" = "pączek";
-"ObjectMLModelCake" = "ciasto";
-"ObjectMLModelChair" = "krzesło";
-"ObjectMLModelSofa" = "kanapa";
-"ObjectMLModelPottedPlant" = "roślina doniczkowa";
-"ObjectMLModelBed" = "łóżko";
-"ObjectMLModelDiningTable" = "stół jadalny";
-"ObjectMLModelToilet" = "toaleta";
-"ObjectMLModelTVMonitor" = "monitor telewizyjny";
-"ObjectMLModelLaptop" = "laptop";
-"ObjectMLModelMouse" = "mysz komputerowa";
-"ObjectMLModelRemote" = "pilot";
-"ObjectMLModelKeyboard" = "klawiatura";
-"ObjectMLModelCellPhone" = "telefon komórkowy";
-"ObjectMLModelMicrowave" = "mikrofalówka";
-"ObjectMLModelOven" = "piekarnik";
-"ObjectMLModelToaster" = "toster";
-"ObjectMLModelSink" = "zlew";
-"ObjectMLModelRefrigerator" = "lodówka";
-"ObjectMLModelBook" = "książka";
-"ObjectMLModelClock" = "zegar";
-"ObjectMLModelVase" = "wazon";
-"ObjectMLModelScissors" = "nożyczki";
-"ObjectMLModelTeddyBear" = "pluszowy miś";
-"ObjectMLModelHairDrier" = "suszarka do włosów";
-"ObjectMLModelToothbrush" = "szczoteczka do zębów";
+"objectMLModelPerson" = "osoba";
+"objectMLModelBicycle" = "rower";
+"objectMLModelCar" = "samochód";
+"objectMLModelMotorbike" = "motocykl";
+"objectMLModelAeroplane" = "samolot";
+"objectMLModelBus" = "autobus";
+"objectMLModelTrain" = "pociąg";
+"objectMLModelTruck" = "ciężarówka";
+"objectMLModelBoat" = "łódź";
+"objectMLModelTrafficLight" = "sygnalizacja świetlna";
+"objectMLModelFireHydrant" = "hydrant przeciwpożarowy";
+"objectMLModelStopSign" = "znak stop";
+"objectMLModelParkingMeter" = "parkomat";
+"objectMLModelBench" = "ławka";
+"objectMLModelBird" = "ptak";
+"objectMLModelCat" = "kot";
+"objectMLModelDog" = "pies";
+"objectMLModelHorse" = "koń";
+"objectMLModelSheep" = "owca";
+"objectMLModelCow" = "krowa";
+"objectMLModelElephant" = "słoń";
+"objectMLModelBear" = "niedźwiedź";
+"objectMLModelZebra" = "zebra";
+"objectMLModelGiraffe" = "żyrafa";
+"objectMLModelBackpack" = "plecak";
+"objectMLModelUmbrella" = "parasolka";
+"objectMLModelHandbag" = "torebka";
+"objectMLModelTie" = "krawat";
+"objectMLModelSuitcase" = "walizka";
+"objectMLModelFrisbee" = "frisbee";
+"objectMLModelSkis" = "narty";
+"objectMLModelSnowboard" = "snowboard";
+"objectMLModelSportsBall" = "piłka sportowa";
+"objectMLModelKite" = "latawiec";
+"objectMLModelBaseballBat" = "kij baseballowy";
+"objectMLModelBaseballGlove" = "rękawica baseballowa";
+"objectMLModelSkateboard" = "deskorolka";
+"objectMLModelSurfboard" = "deska surfingowa";
+"objectMLModelTennisRacket" = "rakieta tenisowa";
+"objectMLModelBottle" = "butelka";
+"objectMLModelWineGlass" = "szklanka do wina";
+"objectMLModelCup" = "filiżanka";
+"objectMLModelFork" = "widelec";
+"objectMLModelKnife" = "nóż";
+"objectMLModelSpoon" = "łyżka";
+"objectMLModelBowl" = "miska";
+"objectMLModelBanana" = "banan";
+"objectMLModelApple" = "jabłko";
+"objectMLModelSandwich" = "kanapka";
+"objectMLModelOrange" = "pomarańcza";
+"objectMLModelBroccoli" = "brokuły";
+"objectMLModelCarrot" = "marchew";
+"objectMLModelHotDog" = "hot dog";
+"objectMLModelPizza" = "pizza";
+"objectMLModelDonut" = "pączek";
+"objectMLModelCake" = "ciasto";
+"objectMLModelChair" = "krzesło";
+"objectMLModelSofa" = "kanapa";
+"objectMLModelPottedPlant" = "roślina doniczkowa";
+"objectMLModelBed" = "łóżko";
+"objectMLModelDiningTable" = "stół jadalny";
+"objectMLModelToilet" = "toaleta";
+"objectMLModelTVMonitor" = "monitor telewizyjny";
+"objectMLModelLaptop" = "laptop";
+"objectMLModelMouse" = "mysz komputerowa";
+"objectMLModelRemote" = "pilot";
+"objectMLModelKeyboard" = "klawiatura";
+"objectMLModelCellPhone" = "telefon komórkowy";
+"objectMLModelMicrowave" = "mikrofalówka";
+"objectMLModelOven" = "piekarnik";
+"objectMLModelToaster" = "toster";
+"objectMLModelSink" = "zlew";
+"objectMLModelRefrigerator" = "lodówka";
+"objectMLModelBook" = "książka";
+"objectMLModelClock" = "zegar";
+"objectMLModelVase" = "wazon";
+"objectMLModelScissors" = "nożyczki";
+"objectMLModelTeddyBear" = "pluszowy miś";
+"objectMLModelHairDrier" = "suszarka do włosów";
+"objectMLModelToothbrush" = "szczoteczka do zębów";
+
+"roadLightMLModelRed" = "czerwony";
+"roadLightMLModelGreen" = "zielony";
+"roadLightMLModelYellow" = "żółty";
 
 // MARK: - Other
 
@@ -440,3 +444,6 @@ Przesuń w lewo, aby wrócić do poprzednich sekcji przewodnika.
 
 "flashlightTriggerModeAutomatic" = "Automatyczny";
 "flashlightTriggerModeSpecificValue" = "Konkretna Wartość";
+
+"distanceMeasureUnitCentimeters" = "Centymetry";
+"distanceMeasureUnitMeters" = "Metry";
